--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "eslint-plugin-prettier": "^5.0.0",
-    "next": "13.4.19",
+    "firebase": "^10.4.0",
+    "next": "^13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.32.5",
