--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -15,6 +15,12 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         env:
           FIREBASE_CLI_EXPERIMENTS: webframeworks
+          NEXT_PUBLIC_FIREBASE_API_KEY: AIzaSyAoKdTL2q59R2n6K8IDK81WKiaq4thC9z0
+          NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: cgs-games.firebaseapp.com
+          NEXT_PUBLIC_FIREBASE_PROJECT_ID: cgs-games
+          NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: cgs-games.appspot.com
+          NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: 848660550500
+          NEXT_PUBLIC_FIREBASE_APP_ID: 1:848660550500:web:a4c14431eb633260f66071
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_CGS_GAMES }}
