--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "firebase": "^10.4.0",
     "next": "^13.5.4",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.32.5",
