--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "^13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-unity-webgl": "^9.4.3",
     "sharp": "^0.32.5",
     "typescript": "5.2.2"
   },
