--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.4.19",
     "eslint-plugin-prettier": "^5.0.0",
     "firebase": "^10.4.0",
+    "firebase-admin": "^11.11.0",
     "next": "^13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,5 +29,11 @@
     "eslint-config-prettier": "^9.0.0",
     "prettier": "3.0.3",
     "webpack": "^5.88.2"
+  },
+  "browser": {
+    "fs": false,
+    "net": false,
+    "tls": false,
+    "child_process": false
   }
 }
