--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.4.19",
     "eslint-plugin-prettier": "^5.0.0",
     "firebase": "^10.4.0",
+    "lodash.debounce": "^4.0.8",
     "next": "^13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,6 +26,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.9",
     "eslint-config-prettier": "^9.0.0",
     "prettier": "3.0.3",
     "webpack": "^5.88.2"
