--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "firebase": "^10.4.0",
     "lodash.debounce": "^4.0.8",
+    "lodash.snakecase": "^4.1.1",
     "next": "^14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
