--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.9",
+    "@types/lodash.snakecase": "^4.1.9",
     "eslint-config-prettier": "^9.0.0",
     "prettier": "3.0.3",
     "webpack": "^5.88.2"
