--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "theme_color": "#D3BD7A",
-  "background_color": "#eef0f1",
+  "background_color": "#EEF0F1",
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
