--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,19 +16,19 @@
     "@nextui-org/theme": "^2.2.9",
     "@szhsin/react-accordion": "^1.2.6",
     "@types/node": "20.6.0",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.2",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^15.1.0",
     "eslint-plugin-prettier": "^5.0.0",
     "firebase": "^10.4.0",
     "firebase-functions": "^6.1.0",
     "framer-motion": "^11.3.30",
     "lodash.debounce": "^4.0.8",
     "lodash.snakecase": "^4.1.1",
-    "next": "^14.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^15.1.0",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.1",
     "typescript": "5.2.2"
@@ -43,5 +43,9 @@
     "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.10",
     "webpack": "^5.88.2"
+  },
+  "overrides": {
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.2"
   }
 }
