--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^9.7.1",
-    "@nextui-org/card": "^2.0.33",
-    "@nextui-org/react": "^2.4.6",
-    "@nextui-org/system": "^2.2.5",
-    "@nextui-org/theme": "^2.2.9",
+    "@nextui-org/card": "^2.2.8",
+    "@nextui-org/react": "^2.6.10",
+    "@nextui-org/system": "^2.4.0",
+    "@nextui-org/theme": "^2.4.0",
     "@szhsin/react-accordion": "^1.2.6",
     "@types/node": "20.6.0",
     "@types/react": "19.0.1",
@@ -24,6 +24,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "firebase": "^10.4.0",
     "firebase-functions": "^6.1.0",
+    "framer-motion": "^11.15.0",
     "lodash.debounce": "^4.0.8",
     "lodash.snakecase": "^4.1.1",
     "lucide-react": "^0.468.0",
