--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^9.7.1",
+    "@nextui-org/accordion": "^2.2.6",
     "@nextui-org/card": "^2.2.8",
-    "@nextui-org/react": "^2.6.10",
     "@nextui-org/system": "^2.4.0",
     "@nextui-org/theme": "^2.4.0",
-    "@szhsin/react-accordion": "^1.2.6",
     "@types/node": "20.6.0",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
