--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.17.0",
     "@types/lodash.debounce": "^4.0.9",
     "@types/lodash.snakecase": "^4.1.9",
     "autoprefixer": "^10.4.20",
