--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "^15.1.0",
     "eslint-plugin-prettier": "^5.0.0",
     "firebase": "^11.2.0",
+    "firebase-admin": "^13.2.0",
     "firebase-functions": "^6.1.0",
     "framer-motion": "^11.15.0",
     "lodash.debounce": "^4.0.8",
