--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-formatter-compact": "^8.40.0",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
     "postcss": "^8.4.41",
