--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
-    "@nextui-org/accordion": "^2.2.6",
-    "@nextui-org/card": "^2.2.8",
-    "@nextui-org/react": "^2.6.10",
-    "@nextui-org/system": "^2.4.0",
-    "@nextui-org/theme": "^2.4.0",
+    "@heroui/accordion": "2.2.23",
+    "@heroui/card": "2.2.24",
+    "@heroui/react": "2.8.4",
+    "@heroui/system": "2.4.22",
+    "@heroui/theme": "2.4.22",
     "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "24.5.2",
     "@types/react": "19.0.1",
@@ -24,12 +24,12 @@
     "firebase": "^11.10.0",
     "firebase-admin": "^13.2.0",
     "firebase-functions": "^6.1.0",
-    "framer-motion": "^12.23.18",
+    "framer-motion": "^12.23.19",
     "lodash.debounce": "^4.0.8",
     "lodash.snakecase": "^4.1.1",
     "next": "^15.5.3",
-    "react": "^19.0.0-rc.1",
-    "react-dom": "^19.0.0-rc.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^2.5.5",
