--- a/package.json
+++ b/package.json
@@ -11,11 +11,7 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
-    "@heroui/accordion": "2.2.23",
-    "@heroui/card": "2.2.24",
-    "@heroui/react": "2.8.4",
-    "@heroui/system": "2.4.22",
-    "@heroui/theme": "2.4.22",
+    "@heroui/react": "^2.8.4",
     "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "24.5.2",
     "@types/react": "19.0.1",
@@ -24,7 +20,7 @@
     "firebase": "^11.10.0",
     "firebase-admin": "^13.2.0",
     "firebase-functions": "^6.1.0",
-    "framer-motion": "^12.23.19",
+    "framer-motion": "^12.23.21",
     "lodash.debounce": "^4.0.8",
     "lodash.snakecase": "^4.1.1",
     "next": "^15.5.3",
@@ -51,7 +47,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
-    "postcss": "^8.4.41",
+    "postcss": "^8.5.6",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.13",
