--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
-    "@heroui/react": "^2.8.4",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "24.5.2",
     "@types/react": "19.1.1",
     "@types/react-dom": "19.1.1",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "firebase": "^11.10.0",
     "firebase-admin": "^13.2.0",
     "firebase-functions": "^6.1.0",
     "framer-motion": "^12.23.21",
     "lodash.debounce": "^4.0.8",
     "lodash.snakecase": "^4.1.1",
+    "lucide-react": "^0.544.0",
     "next": "^15.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -52,6 +54,7 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.13",
     "ts-node": "^10.9.2",
+    "tw-animate-css": "^1.4.0",
     "webpack": "^5.88.2"
   },
   "overrides": {
