--- a/package.json
+++ b/package.json
@@ -52,12 +52,13 @@
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^4.1.13",
-    "ts-node": "^1.7.1",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.4.0",
     "webpack": "^5.104.1"
   },
   "overrides": {
     "@types/react": "19.2.7",
-    "@types/react-dom": "19.2.3"
+    "@types/react-dom": "19.2.3",
+    "diff": "8.0.3"
   }
 }
